# personal-finance-playground

./: .pre-commit-config.yaml  pyproject.toml
src/personal_finance/: cli.py
src/personal_finance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/personal_finance/modules/securities_prices/: collector.py
src/personal_finance/modules/securities_prices/providers/: yahoo.py
tests/: test_securities_prices_collector.py
