[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-finance"
version = "0.1.0"
description = "Personal finance data collection, reporting and alerting toolkit."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
  "beautifulsoup4==4.14.3",
  "numpy==2.4.4",
  "pandas==3.0.2",
  "peewee==4.0.4",
  "requests==2.33.1",
  "rich==14.3.4",
  "yfinance==1.2.1",
]

authors = [
  { name = "Petr Horenek" }
]

[project.scripts]
pf = "personal_finance.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-requests",
]

[tool.pytest.ini_options]
addopts = "-q --cov=personal_finance --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
